--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,28 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
+.stylisethisbutton{
+  background-color: #282c34;
+  padding: 1rem;
+  border-radius: 50%;
+  color: white;
+}
+.navbar{
+  min-height: 10vh;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #282c34;
+  padding: 1.10rem;
+}
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: row;
   align-items: center;
